prevent handleKeyDown function from running on mobile and style search results on focus

--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,10 @@ button::-webkit-scrollbar {
   text-align: left;
 }
 
+.select-field div:focus {
+ background-color: rgb(242, 242, 242);
+}
+
 .select-field svg {
   cursor: pointer;
 }
